# Event-Driven-Inventory-Analytics-Warehouse-BI-System

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  meddata_full_20250916_175921.dump  pyproject.toml  requirements-dev.txt  requirements.txt
airflow/dags/: inventory_gold_pipeline.py  procurement_gold_pipeline.py  sales_gold_pipeline.py
data/: .gitignore
docker/airflow/: Dockerfile
docs/: api-reference.md  architecture.md  control-panel-testing-plan.md  current-state-baseline.md  data-dictionary.md  deployment.md  developer-guide.md  development.md  functional-requirements-checklist.md  runbook.md  security.md
docs/domains/: compliance.md  customer.md  financial.md  inventory.md  operations.md  prescriptions.md  procurement.md  sales.md  supplier.md
schemas/kafka/: inventory_events.json  procurement_events.json  sales_events.json
scripts/: run_inventory_flow.sh  run_procurement_flow.sh  run_sales_flow.sh  setup_local_stack.sh  start_services.sh  stop_services.sh
scripts/lib/: common.sh
sql/warehouse/: 01_roles_and_schemas.sql  02_fdw_master_access.sql  03_inventory_dimensions.sql  04_inventory_fact_and_staging.sql  05_inventory_loads_and_views.sql  06_reorder_and_balance.sql  07_reorder_functions.sql  08_procurement_warehouse.sql  09_sales_warehouse.sql  10_analytical_domains.sql
src/medwarehouse/: __init__.py  __main__.py  cli.py  config.py  logging.py
tests/: test_cli.py  test_config.py  test_contracts.py  test_domain_contracts.py  test_platform.py  test_sql_runner.py  test_warehouse_functions.py  test_webapp_services.py
(+124 files in other folders)
