[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "medwarehouse"
version = "0.1.0"
description = "Event-driven inventory analytics warehouse for medical/pharmaceutical operations"
requires-python = ">=3.11"
dependencies = [
    "confluent-kafka>=2.4",
    "psycopg2-binary>=2.9",
    "flask>=3.0",       # 3.x avoids Werkzeug CVE-2023-25577/CVE-2023-46136
    "werkzeug>=3.0",
    "sqlparse>=0.5",
]

[project.optional-dependencies]
spark = [
    "pyspark>=3.5",
]
airflow = [
    "apache-airflow>=2.8",
]
dev = [
    "pytest>=8",
]

[project.scripts]
medwarehouse = "medwarehouse.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
